@@ -3,6 +3,8 @@
 # Cross Platform and Multi Architecture Advanced Binary Emulation Framework
 #
 
+import binascii
+
 from qiling.const import *
 from qiling.os.const import *
 
@@ -14,6 +16,7 @@ from qiling.os.uefi.UefiBaseType import *
 from qiling.os.uefi.UefiMultiPhase import *
 from qiling.os.uefi.UefiSpec import *
 from qiling.os.uefi.protocols import common
+from qiling.os.uefi import rt
 
 # @see: MdePkg\Include\Pi\PiSmmCis.h
 
@@ -233,7 +236,52 @@ def hook_SmiHandlerRegister(ql, address, params):
 def hook_SmiHandlerUnRegister(ql, address, params):
 	return EFI_SUCCESS
 
+def install_configuration_table(ql, key: str, table: int):
+	"""Create a new Configuration Table entry and add it to the list.
+
+	Args:
+		ql    : Qiling instance
+		key   : profile section name that holds the entry data
+		table : address of configuration table data; if None, data will be read
+		        from profile section into memory
+	"""
+
+	cfgtable = ql.os.profile[key]
+	guid = cfgtable['Guid']
+
+	# if pointer to table data was not specified, load table data
+	# from profile and have table pointing to it
+	if table is None:
+		data = binascii.unhexlify(cfgtable['TableData'])
+		table = ql.loader.smm_conf_table_data_next_ptr
+
+		ql.mem.write(table, data)
+		ql.loader.smm_conf_table_data_next_ptr += len(data)
+
+	SmmInstallConfigurationTable(ql, guid, table)
+
 def initialize(ql, gSmst : int):
+	gSmmRT = gSmst + EFI_SMM_SYSTEM_TABLE2.sizeof()	# smm runtime services
+	cfg = gSmmRT + EFI_RUNTIME_SERVICES.sizeof()	# configuration tables array
+
+	rt.initialize(ql, gSmmRT)
+
+	# configuration tables bookkeeping
+	confs = []
+
+	# these are needed for utils.SmmInstallConfigurationTable
+	ql.loader.smm_conf_table_array = confs
+	ql.loader.smm_conf_table_array_ptr = cfg
+
+	# configuration table data space; its location is calculated by leaving
+	# enough space for 100 configuration table entries. only a few entries are
+	# expected, so 100 should definitely suffice
+	conf_data = cfg + EFI_CONFIGURATION_TABLE.sizeof() * 100
+	ql.loader.smm_conf_table_data_ptr = conf_data
+	ql.loader.smm_conf_table_data_next_ptr = conf_data
+
+	install_configuration_table(ql, "SMM_RUNTIME_SERVICES_TABLE", gSmmRT)
+	
 	descriptor = {
 		'struct' : EFI_SMM_SYSTEM_TABLE2,
 		'fields' : (
@@ -252,8 +300,8 @@ def initialize(ql, gSmst : int):
 			('NumberOfCpus',					None),
 			('CpuSaveStateSize',				None),
 			('CpuSaveState',					None),
-			('NumberOfTableEntries',			None),
-			('SmmConfigurationTable',			0),		# TODO: set this to gST conf table array?
+			('NumberOfTableEntries',			len(confs)),
+			('SmmConfigurationTable',			cfg),
 			('SmmInstallProtocolInterface',		hook_SmmInstallProtocolInterface),
 			('SmmUninstallProtocolInterface',	hook_SmmUninstallProtocolInterface),
 			('SmmHandleProtocol',				hook_SmmHandleProtocol),
