@@ -28,6 +28,9 @@ TableData = FFFF000000000000
 [DXE_SERVICE_TABLE]
 Guid = 05ad34ba-6f02-4214-952e-4da0398e2bb9
 
+[SMM_RUNTIME_SERVICES_TABLE]
+Guid = 395c33fe-287f-413e-a055-8088c0e1d43e
+
 [LOADED_IMAGE_PROTOCOL]
 Guid = 5b1b31a1-9562-11d2-8e3f-00a0c969723b
 
